<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.GroupChatActivity">



    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewChat"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/sendBTN"
        android:layout_width="32dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/send_button_as_image_view"
        android:layout_height="32dp"
        android:src="@drawable/send_btn_icon"
        app:layout_constraintBottom_toBottomOf="@+id/cardView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cardView3" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="55dp"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toStartOf="@+id/sendBTN">


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/messageBox"
                android:layout_width="150dp"
                android:layout_marginStart="5dp"
                android:background="@color/white"
                android:padding="10dp"
                android:inputType="text"
                android:autofillHints="Type Your Message"
                android:hint="@string/type_your_message"
                android:layout_height="48dp"
                android:layout_weight="0.8" />

            <ImageView
                android:id="@+id/attachChatBTN"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_weight="0.1"
                app:tint="#808080"
                android:layout_marginStart="30dp"
                android:contentDescription="@string/attachment_button"
                android:src="@drawable/attachment" />

            <ImageView
                android:id="@+id/cameraChatBTN"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_weight="0.1"
                android:contentDescription="@string/camera_button"
                android:layout_marginEnd="5dp"
                app:tint="#6A6A6A"
                android:src="@drawable/camera_icon" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>